--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-zeromq</artifactId>
+      <groupId>org.zeromq</groupId>
+      <artifactId>jeromq</artifactId>
     </dependency>
   </dependencies>
 </project>
