Install and deploy a separate uber-JAR.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7355 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
             </execution>
           </executions>
           <configuration>
+            <attach>true</attach>
+            <classifier>uber</classifier>
             <mainClass>${start-class}</mainClass>
           </configuration>
         </plugin>
