Moved static main(String[]) method to Kernel.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7356 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <inceptionYear>2021</inceptionYear>
   <properties>
     <jse.target>11</jse.target>
-    <start-class>galyleo.Launcher</start-class>
+    <start-class>galyleo.Kernel</start-class>
   </properties>
   <dependencies verbose="true">
     <dependency>
