Added installer framework.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7385 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # $Id$
 
+groupId: @project.groupId@
+artifactId: @project.artifactId@
+version: @project.version@
+packaging: @project.packaging@
+
 spring.main.banner-mode: OFF
 spring.main.headless: false
 spring.main.log-startup-info: false
