--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # $Id$
 
-groupId: @project.groupId@
-artifactId: @project.artifactId@
-version: @project.version@
-packaging: @project.packaging@
+project.groupId: @project.groupId@
+project.artifactId: @project.artifactId@
+project.version: @project.version@
+project.packaging: @project.packaging@
 
 spring.main.banner-mode: OFF
 spring.main.headless: false
