--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
           </execution>
         </executions>
         <configuration>
+          <artifactSet>
+            <excludes>
+              <exclude>ball:ball-util</exclude>
+            </excludes>
+          </artifactSet>
           <createDependencyReducedPom>true</createDependencyReducedPom>
           <filters>
             <filter>
@@ -95,7 +100,6 @@
               <excludes>**/module-info.class</excludes>
             </filter>
           </filters>
-          <createDependencyReducedPom>true</createDependencyReducedPom>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
