Renamed ball:galyleo to galyleo:galyleo-kernel.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo/trunk@7442 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
   <modelVersion>4.0.0</modelVersion>
   <name>Galyleo</name>
   <description>Jupyter Java Kernel</description>
-  <groupId>ball</groupId>
-  <artifactId>galyleo</artifactId>
+  <groupId>galyleo</groupId>
+  <artifactId>galyleo-kernel</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <parent>
