Specify "random" port for @RestController web server.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7461 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ project.artifactId: @project.artifactId@
 project.version: @project.version@
 project.packaging: @project.packaging@
 
+server.port: 0
+
 spring.main.banner-mode: OFF
 spring.main.headless: false
 spring.main.log-startup-info: false
