--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.zeromq</groupId>
@@ -100,8 +106,12 @@
           <filters>
             <filter>
               <artifact>*:*</artifact>
-              <excludes>META-INF/MANIFEST.MF</excludes>
-              <excludes>**/module-info.class</excludes>
+              <excludes>
+                <exclude>META-INF/*.SF</exclude>
+                <exclude>META-INF/*.DSA</exclude>
+                <exclude>META-INF/*.RSA</exclude>
+                <exclude>**/module-info.class</exclude>
+              </excludes>
             </filter>
           </filters>
           <transformers>
