* Create an isolated ClassLoader in the JShell instance to load 	the galyleo-kernel.jar.
	* src/main/resources/bootstrap.jsh:
	Initial writing: Bootstrap galyleo-kernel.jar in JShell instance
	and provide user methods (e.g., print(Object)) and kernel
	implementation methods (e.g., Magic.receive()).

	* src/main/java/galyleo/kernel/Kernel.java:
	Load all JARS in ${spark-home}/jars and ${hadoop-home}/jars even
	if duplicate groupId:artifactId are implemented.


git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7481 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -40,22 +40,12 @@
       <artifactId>ball-util</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
+      <artifactId>maven-artifact</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>ch.qos.logback</groupId>
-          <artifactId>logback-classic</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.zeromq</groupId>
@@ -106,12 +96,10 @@
           <filters>
             <filter>
               <artifact>*:*</artifact>
-              <excludes>
-                <exclude>META-INF/*.SF</exclude>
-                <exclude>META-INF/*.DSA</exclude>
-                <exclude>META-INF/*.RSA</exclude>
-                <exclude>**/module-info.class</exclude>
-              </excludes>
+              <excludes>META-INF/*.SF</excludes>
+              <excludes>META-INF/*.DSA</excludes>
+              <excludes>META-INF/*.RSA</excludes>
+              <excludes>**/module-info.class</excludes>
             </filter>
           </filters>
           <transformers>
