--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210107-SNAPSHOT</version>
+    <version>20210218.0</version>
     <relativePath/>
   </parent>
   <repositories>
