Started development of ball parent POM 20210220-SNAPSHOT.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7610 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210218.0</version>
+    <version>20210220-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <repositories>
