Added working dependency resolution.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7634 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/galyleo/dependency/POM.yaml
+++ b/src/main/resources/galyleo/dependency/POM.yaml
@@ -3,5 +3,7 @@
 repositories:
   - id: central
     name: Central Maven Repository
-    url: https://repo1.maven.org/maven2
     layout: default
+    url: https://repo1.maven.org/maven2
+    snapshots:
+      enabled: false
