Added logger configurations for Notebooks.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7688 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application-notebook.properties
+++ b/src/main/resources/application-notebook.properties
@@ -4,3 +4,5 @@ spring.main.web-application-type: NONE
 
 spring.autoconfigure.exclude:\
   org.springframework.boot.autoconfigure.gson.GsonAutoConfiguration
+
+logging.level.root: ERROR
