Add topic to Pub message envelopes (trivially msg_type).
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7706 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ project.version: @project.version@
 project.packaging: @project.packaging@
 
 spring.main.banner-mode: OFF
-spring.main.headless: false
+spring.main.headless: true
 spring.main.log-startup-info: false
 
 spring.output.ansi.enabled: NEVER
