Use latest ball parent POM release.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ganymede-kernel/trunk@7751 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210220-SNAPSHOT</version>
-    <relativePath>../ball/parent/pom.xml</relativePath>
+    <version>20210218.0</version>
+    <relativePath/>
   </parent>
   <repositories>
     <repository>
