--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210218.0</version>
+    <version>20210220-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <repositories>
@@ -38,7 +38,7 @@
     <start-class>ganymede.Launcher</start-class>
     <ball-java-jar.version>1.0.0.20210218</ball-java-jar.version>
     <ball-license-maven-plugin.version>1.2.3-SNAPSHOT</ball-license-maven-plugin.version>
-    <ball-util.version>6.1.0.20210218</ball-util.version>
+    <ball-util.version>6.1.1-SNAPSHOT</ball-util.version>
     <kotlin.version>1.4.32</kotlin.version>
     <jetty.version>9.4.39.v20210325</jetty.version>
     <log4j2.version>2.14.1</log4j2.version>
