--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <description>Parent POM</description>
   <groupId>ganymede</groupId>
   <artifactId>parent</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0-beta.1</version>
   <packaging>pom</packaging>
   <parent>
     <groupId>ball</groupId>
@@ -16,19 +16,6 @@
     <version>20210220-SNAPSHOT</version>
     <relativePath/>
   </parent>
-  <distributionManagement>
-    <downloadUrl>https://repo.hcf.dev/maven/release/</downloadUrl>
-    <repository>
-      <id>github</id>
-      <name>GitHub allen-ball Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/allen-ball/repository</url>
-    </repository>
-    <snapshotRepository>
-      <id>github</id>
-      <name>GitHub allen-ball Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/allen-ball/repository</url>
-    </snapshotRepository>
-  </distributionManagement>
   <repositories>
     <repository>
       <id>repo.hcf.dev-RELEASE</id>
