--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <!-- Spark 3.1.1 -->
     <spark.version>3.1.1</spark.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
+    <jetty.version>9.4.40.v20210413</jetty.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.10</scala.version>
     <!-- Optional -->
