--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.0-beta.2</version>
+    <version>1.0.0.20210422</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <inceptionYear>2021</inceptionYear>
