--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <description>Parent POM</description>
   <groupId>ganymede</groupId>
   <artifactId>parent</artifactId>
-  <version>1.0.0-beta.2</version>
+  <version>1.0.0.20210422</version>
   <packaging>pom</packaging>
   <parent>
     <groupId>ball</groupId>
