--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <maven.compiler.source>${jse.target}</maven.compiler.source>
     <kotlin.version>1.4.32</kotlin.version>
     <jetty.version>9.4.39.v20210325</jetty.version>
+    <kotlin.version>1.5.0</kotlin.version>
     <log4j2.version>2.14.1</log4j2.version>
     <resolverVersion>1.6.2</resolverVersion>
     <!-- Spark 3.1.1 -->
