--- a/pom.xml
+++ b/pom.xml
@@ -459,9 +459,6 @@
               <link>https://spark.apache.org/docs/latest/api/java/</link>
               <!-- Apache Tika -->
               <link>https://tika.apache.org/${tika.version}/api/</link>
-              <!-- Apache Velocity -->
-              <link>${javadoc.io}org.apache.velocity/velocity-engine-core/latest/</link>
-              <link>${javadoc.io}org.apache.velocity/velocity-engine-scripting/latest/</link>
               <!-- Eclipse Aether -->
               <link>${javadoc.io}org.eclipse.aether/aether-api/latest/</link>
               <!-- HawtJNI -->
@@ -510,6 +507,15 @@
               <offlineLink>
                 <url>https://www.javadoc.io/doc/org.apache.httpcomponents/httpcore/latest/</url>
                 <location>${javadoc-offline-locations}/httpcore-javadoc-jar/</location>
+              </offlineLink>
+              <!-- Apache Velocity -->
+              <offlineLink>
+                <url>${javadoc.io}org.apache.velocity/velocity-engine-core/latest/</url>
+                <location>${javadoc-offline-locations}/velocity-engine-core-javadoc-jar/</location>
+              </offlineLink>
+              <offlineLink>
+                <url>${javadoc.io}org.apache.velocity/velocity-engine-scripting/latest/</url>
+                <location>${javadoc-offline-locations}/velocity-engine-scripting-javadoc-jar/</location>
               </offlineLink>
               <!-- Groovy -->
               <offlineLink>
